--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@elizaos/plugin-node": "0.1.7",
     "@elizaos/plugin-solana": "0.1.7",
     "@elizaos/plugin-starknet": "0.1.7",
-    "@elizacn/plugin-polkadot": "0.0.0-alpha.4",
+    "@elizacn/plugin-vara": "0.0.0-alpha.5",
     "@tavily/core": "0.0.2",
     "amqplib": "0.10.5",
     "better-sqlite3": "11.5.0",
